--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -2,6 +2,8 @@ html, body {
   height: 100%;
   margin: 0px;
   overflow: hidden;
+  font-size: 16px;
+  font-family: 'Dosis', sans-serif;
 }
 
 #mapid { 
@@ -14,16 +16,44 @@ html, body {
   height: 100vh;
 }
 
+.navbar-brand {
+  font-size: 2rem;
+  font-weight: bolder;
+}
+
+.navbar-nav {
+  font-size: 1.6rem;
+}
+
+option:visited { 
+  background-color: rgb(95, 3, 3) !important;
+  font-weight: bold;
+  font-style: italic;
+}
+
 option:hover { 
   background-color: rgb(226, 39, 39) !important;
   font-weight: bold;
   font-style: italic;
 }
 
+.modal-title {
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
 .info {
-  top:5%;
-  right:0%;
-  left:-30%;
   outline: none;
   overflow:hidden;
+  }
+
+  .modal-dialog{
+    overflow-y: initial !important
+}
+
+  .modal-body {
+    height: 80vh;
+    overflow-y: auto;
+    background-color: rgb(86, 109, 212) !important;
+    font-size: 1.2rem;
   }
