--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -6,10 +6,55 @@ html, body {
   font-family: 'Dosis', sans-serif;
 }
 
+h6 {
+  font-weight: bold;
+  text-align: center;
+}
+
+th {
+  font-weight: bolder;
+}
+
 #mapid { 
   height: 100%;
   margin: 0px;
   overflow: hidden; 
+}
+
+#sel_country {
+  background-color: rgba(236, 177, 16, 0.801) ;
+  overflow-y: scroll; /* Add the ability to scroll */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#sel_country::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#sel_country {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  color: white;
+}
+
+option {
+  font-size: 1.4rem;
+  line-height: 1.5rem;
+}
+
+option:hover { 
+  background-color: rgb(209, 153, 0);
+  font-size: 1.35rem;
+  font-weight: bold;
+  font-style: italic;
 }
 
 .container {
@@ -18,42 +63,61 @@ html, body {
 
 .navbar-brand {
   font-size: 2rem;
+  letter-spacing: 3px;
   font-weight: bolder;
 }
 
 .navbar-nav {
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 
-option:visited { 
-  background-color: rgb(95, 3, 3) !important;
-  font-weight: bold;
-  font-style: italic;
-}
-
-option:hover { 
-  background-color: rgb(226, 39, 39) !important;
-  font-weight: bold;
-  font-style: italic;
+.modal-header {
+  background-color: rgba(185, 91, 3, 0.5);
 }
 
 .modal-title {
-  font-size: 1.5rem;
+  color: white;
+  font-size: 1.7rem;
   font-weight: bolder;
+}
+
+#modalTitle {
+  float: left;
+  clear: left;
+}
+
+#modalFlag {
+  float: right;
+  padding-left: 25vh;
+}
+
+#modalButton {
+  background-color: rgb(160, 119, 7);
+  font-size: 1.4rem;
+  width: 40%;
+  margin: auto;
 }
 
 .info {
   outline: none;
   overflow:hidden;
-  }
-
-  .modal-dialog{
-    overflow-y: initial !important
 }
 
-  .modal-body {
-    height: 80vh;
-    overflow-y: auto;
-    background-color: rgb(86, 109, 212) !important;
-    font-size: 1.2rem;
-  }
+.modal-footer {
+  background-color: rgba(185, 91, 3, 0.5);
+}
+
+/* .modal-header {
+  display: inline-block;
+} */
+
+.modal-dialog{
+  overflow-y: initial !important
+}
+
+.modal-body {
+  height: 80vh;
+  overflow-y: auto;
+  background-color: rgba(236, 178, 16, 0.479) !important;
+  font-size: 1.2rem;
+}
