--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -83,6 +83,7 @@ option:hover {
   color: white;
   font-size: 1.7rem;
   font-weight: bolder;
+  letter-spacing: 3px;
 }
 
 #modalTitle {
@@ -132,4 +133,23 @@ option:hover {
   overflow-y: auto;
   background-color: #04446b;
   font-size: 1.2rem;
+}
+
+/* Preloader css */
+#loading {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  background-color: #fff;
+  z-index: 99;
+}
+
+#loading-image {
+  z-index: 100;
 }
