--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,6 +1,7 @@
 html, body {
   height: 100%;
   margin: 0px;
+  width: 100%;
   overflow: hidden;
   font-size: 16px;
   font-family: 'Dosis', sans-serif;
@@ -16,6 +17,47 @@ th {
   justify-content: left;
 }
 
+.modal {
+  margin-top: 15vh;
+}
+
+.weatherCell{
+  border: none;
+  font-size: 1.2rem;
+}
+
+.number {
+  font-weight: bold;
+
+}
+
+.description {
+  font-weight: 600;
+  text-align: center;
+
+}
+
+.feels {
+  text-align: center;
+}
+
+.dateCell {
+  border-top: 2px solid rgb(3, 58, 207) !important;
+  border-bottom: 2px solid rgb(3, 58, 207) !important;
+}
+
+.borderLeftCell {
+  border-left: 2px solid rgb(3, 58, 207);
+}
+
+.high {
+  color: rgb(197, 71, 25);
+}
+
+.low {
+  color:rgb(82, 113, 250);
+}
+
 .leftInfo {
   vertical-align: middle;
 }
@@ -24,9 +66,6 @@ th {
   display: flex;
   justify-content: right;
   align-items: center;
-  /* text-align: right;
-  vertical-align: middle; */
-
 }
 
 #currencyExchange {
@@ -50,15 +89,44 @@ th {
   line-height: 2rem;
 }
 
-#mapid { 
-  height: 100%;
-  margin: 0px;
-  /* overflow: hidden;  */
+.wrapper, #mapid, .form {
+  height: 100vh;
   width: 100%;
+  padding: 0;
+  margin: 0
 }
 
-#sel_country {
-  overflow-y: scroll; /* Add the ability to scroll */
+.wrapper {
+  position: relative
+}
+
+#mapid, .form {
+  position: absolute;
+  top: 0;
+  left: 0
+}
+
+.form {
+  z-index: 100000;
+  padding: 10px 60px;
+  pointer-events: none;
+}
+
+.form > * {
+  pointer-events: auto;
+}
+
+select {
+  margin-left: 33%;
+  font-family: 'Dosis', sans-serif;
+
+}
+
+#countryList {
+  width: 33%;
+  margin: auto;
+  font-family:  'Dosis', sans-serif;
+  font-size: 1.2rem;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -66,10 +134,18 @@ th {
   display: none;
 }
 
+select {
+  background-color: #fff;
+  border-radius: 4px;
+
+}
+
 /* Hide scrollbar for IE, Edge and Firefox */
 #sel_country {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+  overflow-y: scroll; /* Add the ability to scroll */
+
 }
 
 
@@ -90,21 +166,30 @@ option {
   height: 100vh;
 }
 
-.navbar-brand {
-  font-size: 2rem;
-  letter-spacing: 3px;
-  font-weight: bolder;
+.weatherBack {
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(0, 217, 255, 0.808));
+  border-top: 1px solid rgb(3, 58, 207);
+}
+.weatherBack.modal-body {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.navbar-nav {
-  font-size: 2rem;
+.covidBackground {
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(7, 204, 50, 0.808));
+  border-top: 1px solid rgb(3, 58, 207);
+}
+
+.newsBackground {
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(230, 55, 2, 0.808));
+
 }
 
 .modal-body {
   max-height: 80vh;
-  /* overflow-y: auto;
-  background-color: #04446b;
-  font-size: 1.2rem; */
+  overflow-y: auto;
+  /* background-color: #04446b; */
+  /* font-size: 1.2rem; */ 
 }
 
 td.weatherTable {
