--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -55,7 +55,12 @@ th {
 }
 
 .low {
-  color:rgb(82, 113, 250);
+  color:rgb(36, 70, 219);
+}
+
+.midInfo {
+  vertical-align: middle;
+  font-weight: bold;
 }
 
 .leftInfo {
@@ -119,7 +124,8 @@ th {
 select {
   margin-left: 33%;
   font-family: 'Dosis', sans-serif;
-
+  background-color: #fff;
+  border-radius: 4px;
 }
 
 #countryList {
@@ -132,12 +138,6 @@ select {
 /* Hide scrollbar for Chrome, Safari and Opera */
 #sel_country::-webkit-scrollbar {
   display: none;
-}
-
-select {
-  background-color: #fff;
-  border-radius: 4px;
-
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
@@ -154,8 +154,8 @@ span.markClustPopup {
 }
 
 option {
-  font-size: 1.4rem;
-  line-height: 1.5rem;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
 }
 
 #excRateList {
@@ -188,8 +188,10 @@ option {
 .modal-body {
   max-height: 80vh;
   overflow-y: auto;
-  /* background-color: #04446b; */
-  /* font-size: 1.2rem; */ 
+}
+
+.infoModalBody {
+  padding: 0;
 }
 
 td.weatherTable {
